--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,8 @@ img{
     letter-spacing: 0.02em;
     text-align: center;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
-   
+
 }
 
 .container {
@@ -78,7 +77,6 @@ img{
 
 .navigation {
     display: flex;
-    gap: 40px;
     align-items: center;
 
 }
@@ -104,14 +102,14 @@ img{
     color: #404BBF;
 }
 
-.address{
-    font-style: normal
+.address {
+    font-style: normal;
+    margin-left: auto;
 }
 
 .address-list{
     display: flex;
     gap: 40px;
-    margin-left: 332px;
    
 }
 .address-iteam{
@@ -122,10 +120,16 @@ img{
     line-height: 1.5;
     letter-spacing: 0.02em;
     text-align: left;
-    color: #434455;
 }
-.addres-iteam:hover,
-.address-iteam:focus {
+
+.phone-number{
+    color: inherit;
+}
+
+.phone-number:hover{
+    color: #404BBF;
+}
+.email:hover {
     color: #404BBF;
 }
 
@@ -145,10 +149,9 @@ img{
     font-size: 56px;
     line-height: 1.07;
     letter-spacing: 0.02em;
-    padding-top: 191px;
-    max-width: 496px;
-    margin-left: 472px;
-    margin-right: 472px;
+    max-width: 496px;  
+    margin-left: auto;
+    margin-right: auto;
 }
 .button-order{
     color: inherit;
@@ -162,9 +165,8 @@ img{
     display: block;
     padding: 16px 32px;
     margin-top: 48px;
-    margin-bottom: 188px;
-    margin-left: 636px;
-    margin-right: 635px;
+    margin-left: auto;
+    margin-right: auto;
     min-width: 169px;
     height: 56px;
     border: none;
@@ -179,9 +181,7 @@ img{
 
 /* -----------------------SECTION-FEATURES------------------------- */
 .features-container {
-    display: flex;
-    align-items: center;
-    padding: 120px 0;
+
 }
 .features-list{
     display: flex;
@@ -311,8 +311,6 @@ img{
         letter-spacing: 0.02em;
         text-align: left;
         color: #2E2F42;
-        margin-top: 32px;
-        margin-left: 16px;
         margin-bottom: 8px
 }
 
@@ -323,9 +321,8 @@ img{
     letter-spacing: 0.02em;
     font-weight: 400;
     margin-top: 8px;
-    margin-bottom: 32px;
-    margin-left: 16px;
-}
+
+    }
 /* ------------------------------------------------ */
 
 /* -----------------------FOOTER------------------------- */
@@ -335,12 +332,6 @@ img{
     line-height: 1.5;
     letter-spacing: 0.02em;
     padding: 100px 0
-}
-
-.footer-container {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    margin-left: 156px;
 }
 
 .accent-footer {
